# libx-msg-oss-msg

./: CMakeLists.txt  README.md  XmsOssMsg.cpp  XmsOssMsg.h  libx-msg-oss-msg.h
mgr/: XmsgImMgrNeNetLoad.cpp  XmsgImMgrNeNetLoad.h  XmsgImMgrNeXscServerQuery.cpp  XmsgImMgrNeXscServerQuery.h  XmsgImMgrNeXscWorkerCount.cpp  XmsgImMgrNeXscWorkerCount.h
msg/: XmsgOssDownloadSimple.cpp  XmsgOssDownloadSimple.h  XmsgOssUploadSimple.cpp  XmsgOssUploadSimple.h  XmsgOssUsrObjInfoQuery.cpp  XmsgOssUsrObjInfoQuery.h
ne/: XmsgNeAuth.cpp  XmsgNeAuth.h  XmsgOssInfoQuery.cpp  XmsgOssInfoQuery.h
